fix visibility error for error tooltip

--- a/packages/sit-onyx/src/styles/mixins/input.scss
+++ b/packages/sit-onyx/src/styles/mixins/input.scss
@@ -52,7 +52,7 @@
   }
   &:has(#{$base-selector}__native:user-invalid),
   &:has(#{$base-selector}__native--force-error) {
-    .onyx-form-element__error-message {
+    .onyx-form-element {
       --error-message-display: block;
       // hide the default message once an error is shown
       --message-display: none;
